--- a/src/main/resources/templates/chat/chatRoomList.html
+++ b/src/main/resources/templates/chat/chatRoomList.html
@@ -68,7 +68,8 @@
             },
             function (e) {
                 //에러 콜백
-                alert('로그인해주세요.');
+                //alert('로그인해주세요.');
+                console.log('로그인필요 chatRoomList');
             }
         );
     }
