--- a/src/main/resources/templates/layout/basic.html
+++ b/src/main/resources/templates/layout/basic.html
@@ -101,7 +101,8 @@
                         },
                         function(e){
                             //에러 콜백
-                            alert('로그인해주세요.');
+                            //alert('로그인해주세요.');
+                            console.log('로그인필요 알림');
                         }
                     );
                 }
