--- a/src/main/resources/templates/post/detail.html
+++ b/src/main/resources/templates/post/detail.html
@@ -96,7 +96,7 @@
 
                             <!--가격-->
                             <div class="fs-3 fw-bolder mx-sm-4">
-                                <span th:if="${post.price}!=0" th:text="|${post.price}원|">가격</span>
+                                <span th:if="${post.price}!=0" th:text="|${#numbers.formatInteger(post.price, 0, 'COMMA')}원|">가격</span>
                                 <span th:if="${post.price} == 0">가격없음</span>
 
                             </div>
@@ -176,7 +176,7 @@
                                     <!--지역, 시간-->
                                     <p class="fw-normal text-secondary">[[${post.loc.locName}]] ∙ [[${post.createdTime}]]</p>
                                     <!-- 가격-->
-                                    <h6 class="fw-bolder" th:if="${post.price}!=0" th:text="|${post.price}원|">가격</h6>
+                                    <h6 class="fw-bolder" th:if="${post.price}!=0" th:text="|${#numbers.formatInteger(post.price, 0, 'COMMA')}원|">가격</h6>
                                 </div>
                             </div>
                         </div>
