--- a/src/main/resources/templates/post/searchList.html
+++ b/src/main/resources/templates/post/searchList.html
@@ -27,7 +27,7 @@
                                     <!--지역, 시간-->
                                     <p class="fw">[[${post.loc.locName}]] / [[${post.createdTime}]]</p>
                                     <!-- 가격-->
-                                    <h6 class="fw-bolder" th:if="${post.price}!=0" th:text="|${post.price}원|">가격</h6>
+                                    <h6 class="fw-bolder" th:if="${post.price}!=0" th:text="|${#numbers.formatInteger(post.price, 0, 'COMMA')}원|">가격</h6>
                                 </div>
                             </div>
                         </div>
