Refactor : 회원가입, 비밀번호 변경 관련 로직 리팩토링 & 에러 응답 통일
1. 비밀번호 암호화,변경등 관련 기능을 MemberService에서 -> Member로 이동

2.회원가입, 비밀번호 변경시에 실행 결과의 성패와 응답 메시지를 Map에 담아 반환하는 방법에서 ErrorResponse를 만들어 반환.
-Http응담 상태를 반환하고 응답 구조를 일관되게하기 위해

--- a/src/main/resources/templates/fragments/myPage_nav.html
+++ b/src/main/resources/templates/fragments/myPage_nav.html
@@ -13,27 +13,27 @@
     <div class="info-nav-btns">
         <div class="info-nav-btn">
             <p>&#183; &nbsp;</p>
-            <a th:href="@{/members/{memId}/trade/sellList(memId=${session.loginMember.memId})}">
+            <a th:href="@{/members/{memId}/trade/sell-list(memId=${session.loginMember.memId})}">
                 판매내역 </a>
         </div>
         <div class="info-nav-btn">
             <p>&#183; &nbsp;</p>
-            <a th:href="@{/members/{memId}/trade/buyList(memId=${session.loginMember.memId})}">
+            <a th:href="@{/members/{memId}/trade/buy-list(memId=${session.loginMember.memId})}">
                 구매내역 </a>
         </div>
         <div class="info-nav-btn">
             <p>&#183; &nbsp;</p>
-            <a th:href="@{/members/{memId}/wishes(memId=${session.loginMember.memId})}">
+            <a th:href="@{/members/{memId}/wish-list(memId=${session.loginMember.memId})}">
                 관심목록 </a>
         </div>
         <div class="info-nav-btn">
             <p>&#183; &nbsp;</p>
-            <a th:href="@{/members/{memId}/profile(memId=${session.loginMember.memId})}">
+            <a th:href="@{/members/settings/profile}">
                 프로필 관리 </a>
         </div>
         <div class="info-nav-btn">
             <p>&#183; &nbsp;</p>
-            <a th:href="@{/members/{memId}/edit/pwd(memId=${session.loginMember.memId})}">
+            <a th:href="@{/members/settings/pwd}">
                 비밀번호 변경 </a>
         </div>
     </div>
