--- a/src/main/resources/static/css/member_info.css
+++ b/src/main/resources/static/css/member_info.css
@@ -6,6 +6,8 @@ hr{
 .field-error {
     border-color: #dc3545;
     color: #dc3545;
+    font-size: 13px;
+    padding-top: 3px;
 }
 .field-error-border {
     border-color: #dc3545;
