Refactor : EmailService 코드 변경
1. checked exception가 발생하는 메서드에서 exception를 던지지 않고 try,catch로 잡는 메서드 안에 넣음.
2. 클래스 내부에서만 쓰는 메서드의 접근제한자를 private로 변경.

--- a/src/main/resources/templates/member/findPwd.html
+++ b/src/main/resources/templates/member/findPwd.html
@@ -51,7 +51,7 @@
     $('#sendPwd').click(function() {
       $.ajax({
         type: "POST",
-        url: "findPwd",
+        url: "members/pwd/find",
         data: {
           "email": $('#email').val()
         }
