Refactor : 비밀번호 재설정 기능 코드 수정
1.비밀번호 재설정 : 서비스단에서 Map으로 실행 결과를 반환하는 형식에서, 컨트롤러에서ErrorResponse를 반환하는 형식으로 변환

2. Member관련한 문자열을 생성하는 메서드들을 GenerateUtils클래스로 이동

3. Member서비스,컨트롤러에서 일부 메서드, 지역변수명 수정

--- a/src/main/resources/templates/member/resetPwdForm.html
+++ b/src/main/resources/templates/member/resetPwdForm.html
@@ -51,15 +51,20 @@
     $('#sendPwd').click(function() {
       $.ajax({
         type: "POST",
-        url: "members/pwd/find",
-        data: {
+        url: "members/pwd/reset",
+        contentType: 'application/json; charset=utf-8',
+        data: JSON.stringify({
           "email": $('#email').val()
-        }
+        })
       }).done(function (data) {
         alert("해당 이메일로 임시번호가 발급되었습니다.")
         location.href ="/members/login";
       }).fail(function (err) {
         const message = err.responseJSON;
+        $('#email').addClass('field-error-border');
+        const str = `<div class="field-error" id="email-error">이메일 형식에 맞지 않습니다.</div>`
+        $('#email-error').replaceWith(str);
+        return false;
         console.log(message);
         if (message.email) {
           console.log(message.email)
